tidying up ant files and prepping site testing targets

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,6 @@
 # TOP LEVEL SolrMarc properties file
+
+#-------- GENERAL properties ----------
 java.compat.version = 1.5
 
 name = solrmarc
@@ -17,40 +19,69 @@ solr.log.level = SEVERE
 solrmarc.log.level = WARN
 
 #path for executable scripts relative to the dist dir
+# FIXME: keep this?
 dist.exe.dir = bin
 trans.map.dir = translation_maps
 javadoc.dir = docs/javadoc
 
-buildtools.path = setup/buildtools
+# FIXME:  can buildtools GO AWAY???
+#buildtools.path = setup/buildtools
+# FIXME:  can script templates GO AWAY???
 script.template.dir = script_templates
+# FIXME:  can scripts just be static files in a static directory?
 scripts.dir = index_scripts
-
-# CORE properties
-core.src.dir = ${src.dir}/core
-core.build.dir = ${build.dir}/core
 
 # --- SOLR properties for building (not running)
 solrj.lib.dir = ${lib.dir}/solrj-lib
 
 # --- SOLR properties for running
+# FIXME: redundant/implied to use remote solr
 use.remote.solr = true
+# FIXME: the solr.url should be dealt with as a core or site property, along with other remote props
 solr.url = http://localhost:8983/solr
+# FIXME: can we get rid of verbose and just use log levels?  Or is it used for remote?
 solr.verbose = true
+
 
 # --- TEST properties (general) ---
 test.dir = test
 test.lib.dir = ${test.dir}/lib
 
+# FIXME: relationship to log levels above?
 # java.util.logging level settings for solr logging:  OFF, SEVERE, WARNING, INFO, FINE, FINER, FINEST, ALL
 test.solr.log.level = WARN
 # log4j logging level settings for solrmarc logging:  OFF, FATAL, WARN, INFO, DEBUG, ALL
 test.solrmarc.log.level = WARN
 
-# --- core TEST properties ---
+# --- Solr/Jetty properties for testing only
+test.jetty.dir = ${test.dir}/jetty
+test.jetty.port = 8985
+test.solr.url = http://localhost:${test.jetty.port}/solr
+# test.solr.run.dir - location of the solr instance instantiated for testing
+test.solr.run.dir = ${test.jetty.dir}/solr
+test.solr.data.dir = ${test.solr.run.dir}/data
+
+# --- Continuous Integration Properties
+ci.dir = ci
+coverage.dir = ${ci.dir}/coverage
+instr.dir = ${ci.dir}/instr
+
+#-------- END GENERAL properties ----------
+
+
+#-------- CORE properties ----------
+
+# CORE properties
+core.src.dir = ${src.dir}/core
+core.build.dir = ${build.dir}/core
+
+
+# --- CORE TEST properties ---
 core.test.dir = ${test.dir}/core
 core.test.src.dir = ${core.test.dir}/src
 core.test.build.dir = ${core.build.dir}/${test.dir}
 
+# FIXME:  drop "use" and drop solr_server_proxy
 core.test.use_solr_server_proxy = true
 core.test.use_binary_request_handler = true
 core.test.use_streaming_proxy = true
@@ -62,34 +93,79 @@ core.test.class = org.solrmarc.AllTests
 #core.test.class = org.solrmarc.tools.CommandLineUtilTests
 #core.test.class = org.solrmarc.tools.MergeSummaryHoldingsTests
 
-# --- Continuous Integration Properties
-ci.dir = ci
-coverage.dir = ${ci.dir}/coverage
-instr.dir = ${ci.dir}/instr
+core.test.solr.orig.dir = ${test.dir}/solr
+core.solr.war.path = ${core.test.solr.orig.dir}/war/apache-solr-3.6-2011-12-15_08-09-30.war
 
 # -- CORE Continuous Integration Properties
 core.instr.dir = ${instr.dir}/core
 core.coverage.dir = ${coverage.dir}/core
 core.coverage.test.class = org.solrmarc.AllTests
 
+#-------- END CORE properties ----------
 
-# --- SOLR/JETTY properties for core TEST
-core.test.solr.orig.dir = ${test.dir}/solr
-core.solr.war.path = ${core.test.solr.orig.dir}/war/apache-solr-3.6-2011-12-15_08-09-30.war
 
-test.jetty.dir = ${test.dir}/jetty
-test.jetty.port = 8985
-test.solr.url = http://localhost:${test.jetty.port}/solr
-# test.solr.run.dir - location of the solr instance instantiated for testing
-test.solr.run.dir = ${test.jetty.dir}/solr
-test.solr.data.dir = ${test.solr.run.dir}/data
+#-------- SITE properties ----------
+
+# build.xml currently looks for 	<property file="${site.conf.props}" />
+#Property "site.basename" has not been set
+#Property "site.conf.dir" has not been set
+#Property "trans.map.path" has not been set
+#Property "site.lib.dir" has not been set
+#Property "site.test.lib.dir" has not been set
 
 
 #--- SITE properties ---
-site.basename = stanford
-site.conf.dir = conf/${site.basename}
-site.conf.props = ${site.conf.dir}/stanford_build.properties
-solr.is.multicore = false
+#site.basename = stanford
+#site.conf.dir = conf/${site.basename}
+#site.conf.props = ${site.conf.dir}/stanford_build.properties
+#solr.is.multicore = false
+
+site.dirname = stanford
+site.src.dir = ${src.dir}/${site.dirname}
+site.build.dir = ${build.dir}/${site.dirname}
+site.config.file = conf/${site.dirname}/sw_config.properties
+
+# FIXME:  drop "use" and drop solr_server_proxy
+site.use_binary_request_handler = true
+site.use_streaming_proxy = true
+# FIXME: is this redundant?
+site.use_solr_server_proxy = true
+
+#site.solr.war.path = /home/blacklight/solr-war/solr.war
+# FIXME:  is there any point in keeping port separate?
+site.jetty.port = 8983
+site.solr.url = http://localhost:${site.jetty.port}/solr
+
+#site.data.path = /data/sirsi/latest/updates
+
+
+#--- SITE TEST properties ---
+
+site.test.dir = ${test.dir}/${site.dirname}
+site.test.src.dir = ${site.test.dir}/src
+site.test.build.dir = ${site.build.dir}/${test.dir}
+
+site.test.solr.orig.dir = 
+site.test.solr.url = http://localhost:8983/solr
+
+site.test.config.file = ${site.config.file}
+site.test.data.path = ${site.test.dir}/data
+
+site.test.use_binary_request_handler = ${site.use_binary_request_handler}
+site.test.use_streaming_proxy = ${site.use_streaming_proxy}
+site.test.use_solr_server_proxy = ${site.use_solr_server_proxy}
+
+site.test.class = edu.stanford.AllTests
+
+# -- SITE Continuous Integration Properties
+site.instr.dir = ${instr.dir}/${site.dirname}
+site.coverage.dir = ${coverage.dir}/${site.dirname}
+site.coverage.test.class = edu.stanford.AllTests
+
+
+#-------- END SITE properties ----------
+
+
 
 # - example.configuration - name of example configuration that your site is based on.
 #example.configuration = stanford
@@ -101,7 +177,7 @@ solr.is.multicore = false
 
 # - default.config - file containing your site's configuration properties for 
 #   solrmarc
-default.config = sw_config.properties
+#default.config = sw_config.properties
 
 #- solrmarc.solr.war.path - location of solr.war containing solr jar libraries 
 #                           or directory that contains those solr jar libraries 
@@ -119,17 +195,17 @@ default.config = sw_config.properties
 #  laptop
 #solr.path = /Users/ndushay/NGDE/solr/jetty-solr1.5/solr
 #  testing (Hudson)
-site.test.solr.path = test/solr
+#site.test.solr.path = test/solr
 
 #- solr.hosturl - URL of where the solr server is running
-solr.hosturl = http://localhost:8983/solr
+#solr.hosturl = http://localhost:8983/solr
 
 
 #----- TEST properties ---------
 
 
 
-test.class = edu.stanford.AllTests
+#test.class = edu.stanford.AllTests
 #test.class = edu.stanford.MiscellaneousFieldTests
 
 #jetty.site.location = ${test.dir}/jetty
