working on getting coverage tasks to fail when tests fail

--- a/build.properties
+++ b/build.properties
@@ -21,11 +21,11 @@ solrmarc.log.level = WARN
 #path for executable scripts relative to the dist dir
 # FIXME: keep this?
 dist.exe.dir = bin
+# FIXME:  Property "dist.path" has not been set
+# FIXME:  Property "trans.map.path" has not been set
 trans.map.dir = translation_maps
 javadoc.dir = docs/javadoc
 
-# FIXME:  can buildtools GO AWAY???
-#buildtools.path = setup/buildtools
 # FIXME:  can script templates GO AWAY???
 script.template.dir = script_templates
 # FIXME:  can scripts just be static files in a static directory?
