tweaking build scripts to get jetty running on hudson

--- a/build.properties
+++ b/build.properties
@@ -55,7 +55,8 @@ test.solrmarc.log.level = WARN
 
 # --- Solr/Jetty properties for testing only
 test.jetty.dir = ${test.dir}/jetty
-test.jetty.port = 8985
+#test.jetty.port = 8985
+test.jetty.port = 0
 test.solr.url = http://localhost:${test.jetty.port}/solr
 # test.solr.run.dir - location of the solr instance instantiated for testing
 test.solr.run.dir = ${test.jetty.dir}/solr
