--- a/build.xml
+++ b/build.xml
@@ -315,7 +315,7 @@
     	<sysproperty key="test.solr.url" value="${test.solr.url}" />
 			<sysproperty key="test.solr.path" value="${test.solr.run.dir}" />
 			<sysproperty key="solr.data.dir" value="${test.solr.data.dir}" />
-			<sysproperty key="solr.path" value="${test.solr.path}" />
+			<sysproperty key="solr.path" value="${test.solr.run.dir}" />
     	
 			<test name="${core.coverage.test.class}" />
 		</junit>
