fiddling with ant files to get site targets to work

--- a/build.properties
+++ b/build.properties
@@ -107,9 +107,7 @@ core.coverage.test.class = org.solrmarc.AllTests
 #-------- SITE properties ----------
 
 # build.xml currently looks for 	<property file="${site.conf.props}" />
-#Property "site.basename" has not been set
 #Property "site.conf.dir" has not been set
-#Property "trans.map.path" has not been set
 #Property "site.lib.dir" has not been set
 #Property "site.test.lib.dir" has not been set
 
@@ -120,20 +118,24 @@ core.coverage.test.class = org.solrmarc.AllTests
 #site.conf.props = ${site.conf.dir}/stanford_build.properties
 #solr.is.multicore = false
 
-site.dirname = stanford
-site.src.dir = ${src.dir}/${site.dirname}
+site.dirname = stanford-sw
+site.src.dir = ${site.dirname}/src
 site.build.dir = ${build.dir}/${site.dirname}
-site.config.file = conf/${site.dirname}/sw_config.properties
+#site.lib.dir = ${site.dirname}/lib  # there is no lib dir for stanford-sw
+site.lib.dir = ${site.dirname}
+site.config.file = ${site.dirname}/sw_config.properties
 
 # FIXME:  drop "use" and drop solr_server_proxy
 site.use_binary_request_handler = true
 site.use_streaming_proxy = true
-# FIXME: is this redundant?
+# FIXME: this should be redundant?
 site.use_solr_server_proxy = true
+
+site.jar.name = ${site.dirname}
 
 #site.solr.war.path = /home/blacklight/solr-war/solr.war
 # FIXME:  is there any point in keeping port separate?
-site.jetty.port = 8983
+site.jetty.port = 8986
 site.solr.url = http://localhost:${site.jetty.port}/solr
 
 #site.data.path = /data/sirsi/latest/updates
@@ -141,12 +143,18 @@ site.solr.url = http://localhost:${site.jetty.port}/solr
 
 #--- SITE TEST properties ---
 
-site.test.dir = ${test.dir}/${site.dirname}
+site.test.dir = ${site.dirname}/test
 site.test.src.dir = ${site.test.dir}/src
 site.test.build.dir = ${site.build.dir}/${test.dir}
+#site.test.lib.dir = ${site.test.dir}/lib # there is no test lib dir for stanford sw
+site.test.lib.dir = ${site.test.dir}
 
-site.test.solr.orig.dir = 
-site.test.solr.url = http://localhost:8983/solr
+site.test.jetty.port = 8987
+site.test.jetty.dir = ${test.jetty.dir}
+site.test.solr.run.dir = ${site.test.jetty.dir}/solr
+site.test.solr.data.dir = ${site.test.solr.run.dir}/data
+site.test.solr.orig.dir = ${core.test.solr.orig.dir}
+site.test.solr.url = http://localhost:${site.test.jetty.port}/solr
 
 site.test.config.file = ${site.config.file}
 site.test.data.path = ${site.test.dir}/data
@@ -155,7 +163,8 @@ site.test.use_binary_request_handler = ${site.use_binary_request_handler}
 site.test.use_streaming_proxy = ${site.use_streaming_proxy}
 site.test.use_solr_server_proxy = ${site.use_solr_server_proxy}
 
-site.test.class = edu.stanford.AllTests
+#site.test.class = edu.stanford.AllTests
+site.test.class = edu.stanford.AccessTests
 
 # -- SITE Continuous Integration Properties
 site.instr.dir = ${instr.dir}/${site.dirname}
@@ -221,15 +230,6 @@ site.coverage.test.class = edu.stanford.AllTests
 
 #- jetty.test.port - port where test instance of jetty should be started
 #jetty.test.port = 8987
-
-# - cobertura.jar.dir - directory containing cobertura jar file(s)
-#cobertura.jar.path = test/lib/cobertura-1.9.4.1
-
-# - cobertura.instr.dir - directory containing classes instrumented for coverage data
-#cobertura.instr.dir = instr
-
-# - cobertura.coverage.dir - directory for coverage reports
-#cobertura.coverage.dir = build/coverage/cobertura
 
 # - maximum.expected.recs.in.test.solr - If more than this number of records is found in the 
 # test solr instance, terminate the smoketest target before performing the delete_all_records step.
